using class to build SPA with vanilla js

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,54 @@
+/** reset CSS */
+* {
+  box-sizing: border-box;
+}
+
+html, body, div, span, video, img, nav,
+header, footer, section, ol, ul, li {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  font: inherit;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+/** style tokens */
+:root {
+  --background-color: red;
+}
+
+/** styles */
+.root {
+  width: 100%;
+  height: 100%;
+}
+.videoContainer {
+  width: 50vw;
+  height: 50vh;
+}
+.videoCtr {
+ background-color: blue;
+ width: 100%;
+ height: 100%;
+}
+
 body {
-  background-color: red;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  /* background-color: var(--background-color); */
+}
+body > div {
+  border: 1px solid red;
+}
+
+.video_wrapper {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  color: white;
 }
