--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,26 +24,38 @@ ol, ul {
 
 /** styles */
 .root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  overflow-y: auto;
+  display: grid;
+  grid-template-areas: 'nav nav'
+                       'section aside';
+  grid-template-rows: 65px auto;
+  grid-auto-columns: auto minmax(300px, 402px);
+  border: 1px solid blue;
+}
+
+.navWrap {
+  grid-area: nav;
+  background-color: khaki;
+}
+.mainWrap {
+  grid-area: section;
+  background-color: lightcoral;
+}
+.asideWrap {
+  grid-area: aside;
+  background-color: lightcyan;
 }
 .videoContainer {
   width: 50vw;
-  height: 50vh;
+  /* height: 50vh; */
+  border: 1px solid red;
 }
 .videoCtr {
- background-color: blue;
+ /* background-color: blue; */
  width: 100%;
  height: 100%;
-}
-
-body {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  /* background-color: var(--background-color); */
-}
-body > div {
-  border: 1px solid red;
 }
 
 .video_wrapper {
@@ -51,4 +63,29 @@ body > div {
   height: 100px;
   background-color: blue;
   color: white;
+  grid-area: 'section';
+}
+
+.recommendContainer {
+  border: 1px solid red;
+  /* height: 50vh; */
+  grid-area: 'aside';
+}
+
+.navContainer {
+  border: 1px solid red;
+  /* height: 50vh; */
+}
+
+@media (max-width: 1000px) {
+  .root {
+    width: 100vw;
+    height: 100vh;
+    overflow-y: auto;
+    display: grid;
+    grid-template-areas: 'nav'
+                         'section'
+                         'aside';
+  }
+  
 }
