--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,13 +4,18 @@
 }
 
 html, body, div, span, video, img, nav,
-header, footer, section, ol, ul, li {
+header, footer, section, ol, ul, li, button, span {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
   font: inherit;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+
+button {
+  background-color: transparent;
 }
 
 ol, ul {
@@ -20,9 +25,62 @@ ol, ul {
 /** style tokens */
 :root {
   --background-color: red;
+  --button-font-size: 13px;
 }
 
 /** styles */
+.videoContainer {
+  width: 73.7vw;
+  height: 50vh;
+  border: 1px solid red;
+  position: relative;
+}
+
+#videoBasic {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* display: none; */
+}
+
+.video-controls {
+  position: absolute;
+  bottom: 0;
+  text-shadow: 0 0 2px rgb(0 0 0 / 50%);
+  height: 43px;
+  width: 100%;
+  padding-top: 3px;
+  /* background-color: blue; */
+  color: #ddd;
+  font-size: var(--button-font-size);
+}
+.left-buttons {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.time-display {
+  padding: 0 5px;
+  line-height: 39px;
+}
+
+.svg-fill {
+  fill: #fff;
+}
+
+.play-btn {
+  /* height: 100%; */
+  width: 46px;
+  /* display: inline; */
+}
+.next-btn {
+  height: 100%;
+  width: 40px;
+}
+.volume {
+  width: 40px;
+}
+
 .root {
   width: 100vw;
   height: 100vh;
@@ -46,11 +104,6 @@ ol, ul {
 .asideWrap {
   grid-area: aside;
   background-color: lightcyan;
-}
-.videoContainer {
-  width: 50vw;
-  /* height: 50vh; */
-  border: 1px solid red;
 }
 .videoCtr {
  /* background-color: blue; */
