--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,18 +26,19 @@ ol, ul {
 :root {
   --background-color: red;
   --button-font-size: 13px;
+  --aspect-ratio: 9/16;
 }
 
 /** styles */
 .videoContainer {
-  width: 73.7vw;
-  height: 50vh;
-  border: 1px solid red;
+  width: 50vw;
+  height: calc(50vw * var(--aspect-ratio));
   position: relative;
 }
 
 #videoBasic {
   position: absolute;
+  object-fit: fill;
   width: 100%;
   height: 100%;
   /* display: none; */
@@ -49,15 +50,38 @@ ol, ul {
   text-shadow: 0 0 2px rgb(0 0 0 / 50%);
   height: 43px;
   width: 100%;
-  padding-top: 3px;
+  padding: 0 12px;
+  /* padding-top: 3px; */
   /* background-color: blue; */
   color: #ddd;
   font-size: var(--button-font-size);
 }
+.progress-bar {
+  /* position: absolute; */
+  width: 100%;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.watched {
+  background-color: #f00;
+  height: 100%;
+  width: 0%;
+}
+.control-buttons {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 .left-buttons {
+  position: absolute;
   display: flex;
   height: 100%;
-  width: 100%;
+}
+.right-buttons {
+  position: absolute;
+  height: 100%;
+  max-width: 240px;
+  right: 0;
 }
 .time-display {
   padding: 0 5px;
