content info section

--- a/vanilla-youtube/src/css/style.css
+++ b/vanilla-youtube/src/css/style.css
@@ -4,11 +4,11 @@
 }
 
 html, body, div, span, video, img, nav,
-header, footer, section, ol, ul, li, button, span {
+header, footer, section, ol, ul, li, button, span, h1 {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 24px;
   vertical-align: baseline;
   font: inherit;
   font-family: Roboto, Arial, Helvetica, sans-serif;
@@ -22,6 +22,11 @@ ol, ul {
   list-style: none;
 }
 
+h1 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
 /** style tokens */
 :root {
   --background-color: red;
@@ -33,16 +38,19 @@ ol, ul {
 /** styles */
 .modal-position {
   position: fixed;
-  /* right: 30px;
-  bottom: 116px; */
+  right: 30px;
+  bottom: 116px;
 }
 .videoContainer {
-  width: var(--video-width);
-  height: calc(var(--video-width) * var(--aspect-ratio));
+  width: 100%;
+  height: 100%;
+  /* max-width: var(--video-width);
+  min-width: 450px;
+  height: calc(var(--video-width) * var(--aspect-ratio)); */
   position: relative;
 }
 
-#videoBasic {
+#video-tag {
   position: absolute;
   object-fit: fill;
   width: 100%;
@@ -119,7 +127,7 @@ ol, ul {
   grid-template-areas: 'nav nav'
                        'section aside';
   grid-template-rows: 65px auto;
-  grid-auto-columns: auto minmax(300px, 402px);
+  grid-auto-columns: auto minmax(300px, 482px);
   border: 1px solid blue;
 }
 
@@ -129,8 +137,7 @@ ol, ul {
 }
 .main-wrap {
   grid-area: section;
-  background-color: lightcoral;
-  padding-right: 24px 24px 0 0;
+  padding: 24px 24px 0 0;
   margin-left: 24px;
 }
 .aside-wrap {
@@ -162,6 +169,38 @@ ol, ul {
   /* height: 50vh; */
 }
 
+/** video section style */
+.video-space {
+  max-width: var(--video-width);
+  min-width: 450px;
+  height: calc(var(--video-width) * var(--aspect-ratio));
+  background-color: red;
+}
+.introduction-space {
+  width: 100%;
+  height: 100px;
+}
+#info-contents {
+  padding: 20px 0 8px;
+  width: 100%;
+  border-bottom: 1px solid #eee;
+}
+#info-contents p {
+  color: #606060;
+  font-size: .9rem;
+}
+.info-contents-btn {
+  display: flex;
+  align-items: center;
+}
+.contents-popularity-info {
+  display: flex;
+  justify-content: space-between;
+}
+#info-creator {
+
+}
+
 @media (max-width: 1000px) {
   .root {
     width: 100vw;
@@ -171,6 +210,9 @@ ol, ul {
     grid-template-areas: 'nav'
                          'section'
                          'aside';
+  }
+  .video-space {
+    max-width: 90vw;
   }
   
 }
